--- a/[05] 소스코드/bigdata/requirements.txt
+++ b/[05] 소스코드/bigdata/requirements.txt
@@ -3,10 +3,12 @@ attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==2.9.2
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.5
@@ -39,6 +41,7 @@ parso==0.7.0
 pickleshare==0.7.5
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
+pycparser==2.20
 Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
@@ -52,6 +55,7 @@ ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 Send2Trash==1.5.0
 six==1.14.0
+SQLAlchemy==1.3.17
 sqlparse==0.3.1
 terminado==0.8.3
 testpath==0.4.4
