--- a/[05] 소스코드/backend/src/main/resources/application.properties
+++ b/[05] 소스코드/backend/src/main/resources/application.properties
@@ -19,18 +19,13 @@ server.compression.enabled=true
 # Run Database and set url properly.
 # ===============================
 
-#spring.datasource.username=test
-#spring.datasource.password=rot12345678!!
-#spring.datasource.jdbc-url=jdbc:mysql://i02b201.p.ssafy.io/rot?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=test
+spring.datasource.password=rot12345678!!
+spring.datasource.jdbc-url=jdbc:mysql://k02b2031.p.ssafy.io/rot?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-
-
-spring.datasource.username=root
-spring.datasource.password=bloom1234!!
-spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1/bloom?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.maximumPoolSize=5
