--- a/[05] 소스코드/bigdata/.gitignore
+++ b/[05] 소스코드/bigdata/.gitignore
@@ -1,7 +1,6 @@
-
+.data
 # Created by https://www.gitignore.io/api/django,python,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=django,python,jupyternotebooks,visualstudiocode
-
 ### Django ###
 *.log
 *.pot
