--- a/[05] 소스코드/frontend/package.json
+++ b/[05] 소스코드/frontend/package.json
@@ -12,6 +12,7 @@
         "bn.js": "^5.0.0",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.10.0",
+        "chart.js": "^2.9.3",
         "core-js": "^3.3.2",
         "jquery": "^3.4.1",
         "mdbvue": "^6.6.0",
@@ -19,6 +20,7 @@
         "sass-loader": "^8.0.2",
         "vue": "^2.6.10",
         "vue-browser-geolocation": "^1.8.0",
+        "vue-chartjs": "^3.5.0",
         "vue-daum-map": "^1.0.15",
         "vue-google-autocomplete": "^1.1.0",
         "vue-google-places": "^0.1.6",
