--- a/[05] 소스코드/backend/build.gradle
+++ b/[05] 소스코드/backend/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
 	compile('com.google.code.gson:gson')
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+	compile('org.web3j:web3j-spring-boot-starter:1.6.0')
 	compile('org.hyperledger.fabric-sdk-java:fabric-sdk-java:1.4.0')
 
 }
