--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -4,7 +4,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        show_sql: false
         format_sql: true
     hibernate:
       ddl-auto: none
@@ -21,9 +20,9 @@ spring:
     password: rot123456789!!
 
 server:
-  port: 8081
+  port: 8080
 
 logging:
   level:
     org.hibernate.SQL: debug
-    org.hibernate.type: trece
+    org.hibernate.type: trace
