--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -4,9 +4,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        physical_naming_strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         format_sql: true
+        show_sql: false
     hibernate:
       ddl-auto: none
+
   servlet:
     multipart:
       enabled: true
