--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         format_sql: true
         show_sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
 
   servlet:
     multipart:
