--- a/[05] 소스코드/bigdata/requirements.txt
+++ b/[05] 소스코드/bigdata/requirements.txt
@@ -12,6 +12,7 @@ cryptography==2.9.2
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.5
+django-cors-headers==3.3.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
 entrypoints==0.3
@@ -53,6 +54,7 @@ pyzmq==18.1.1
 requests==2.23.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
+selenium==3.141.0
 Send2Trash==1.5.0
 six==1.14.0
 SQLAlchemy==1.3.17
