--- a/[05] 소스코드/bigdata/requirements.txt
+++ b/[05] 소스코드/bigdata/requirements.txt
@@ -25,16 +25,18 @@ ipython-genutils==0.2.0
 itypes==1.2.0
 jedi==0.17.0
 Jinja2==2.11.2
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1589812474002/work
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
 MarkupSafe==1.1.1
 mistune==0.8.4
+mkl-service==2.3.0
 mysqlclient==1.4.6
 nbconvert==5.6.1
 nbformat==5.0.6
 notebook==6.0.3
-numpy==1.18.4
+numpy @ file:///D:/bld/numpy_1588605212216/work
 packaging==20.4
 pandas==1.0.3
 pandocfilters==1.4.2
@@ -54,6 +56,8 @@ pyzmq==18.1.1
 requests==2.23.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
+scikit-surprise==1.1.0
+scipy==1.4.1
 selenium==3.141.0
 Send2Trash==1.5.0
 six==1.14.0
@@ -62,6 +66,7 @@ sqlparse==0.3.1
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1588513834538/work
 traitlets==4.3.3
 uritemplate==3.0.1
 urllib3==1.25.9
