--- a/[05] 소스코드/bigdata/requirements.txt
+++ b/[05] 소스코드/bigdata/requirements.txt
@@ -25,7 +25,7 @@ ipython-genutils==0.2.0
 itypes==1.2.0
 jedi==0.17.0
 Jinja2==2.11.2
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1589812474002/work
+# joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1589812474002/work
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
@@ -36,7 +36,7 @@ mysqlclient==1.4.6
 nbconvert==5.6.1
 nbformat==5.0.6
 notebook==6.0.3
-numpy @ file:///D:/bld/numpy_1588605212216/work
+numpy==1.18.4
 packaging==20.4
 pandas==1.0.3
 pandocfilters==1.4.2
@@ -66,7 +66,7 @@ sqlparse==0.3.1
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1588513834538/work
+# tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1588513834538/work
 traitlets==4.3.3
 uritemplate==3.0.1
 urllib3==1.25.9
