--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -17,14 +17,14 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://k02b2031.p.ssafy.io/rot_jk?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://k02b2031.p.ssafy.io/rot?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: test
     password: rot123456789!!
 
 server:
   port: 8080
 
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
+#    org.hibernate.type: trace
