--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
-        show_sql: true
+        show_sql: false
     hibernate:
       ddl-auto: update
 
