--- a/[05] 소스코드/backend/build.gradle
+++ b/[05] 소스코드/backend/build.gradle
@@ -5,8 +5,14 @@ plugins {
 }
 
 group = 'com.roomoftruth'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '1.8'
+
+jar {
+	manifest {
+		attributes 'Main-Class' : 'RotApplication'
+	}
+}
 
 configurations {
 	compileOnly {
