--- a/[05] 소스코드/blockchain/crypto-config.yaml
+++ b/[05] 소스코드/blockchain/crypto-config.yaml
@@ -1,13 +1,20 @@
-OrdererOrgs:
-    - Name: orderer0
-      Domain: ordererorg
-      Specs:
-          - Hostname: orderer0
+OrdererOrgs: #정렬 노드의 조직 정의
+  - Name: Orderer #정렬 노드 이름
+    Domain: rot.com # 정렬 노드의 루트
+    Specs:
+      - Hostname: orderer
 
-PeerOrgs:
-    - Name: HFTeam1
-      Domain: HFTeam1
-      Template:
-          Count: 1
-      Users:
-          Count: 1
+PeerOrgs: #피어 노드의 조직 정의
+  - Name: Estate1 #피어 노드의 조직1의 이름
+    Domain: estate1.rot.com # 피어 노드의 조직1의 도메인
+    Template:
+      Count: 2 #조직의 노드 수
+    Users:
+      Count: 1 #조직의 사용자 수
+  - Name: Estate2
+    Domain: estate2.rot.com
+    # EnableNodeOUs: true
+    Template:
+      Count: 2
+    Users:
+      Count: 1
