--- a/[05] 소스코드/bigdata/requirements.txt
+++ b/[05] 소스코드/bigdata/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.7
 django-cors-headers==3.3.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
+gunicorn==20.0.4
 idna==2.9
 inflection==0.5.0
 itypes==1.2.0
@@ -17,7 +18,6 @@ mysqlclient==1.4.6
 numpy==1.18.5
 packaging==20.4
 pandas==1.0.4
-pkg-resources==0.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
