--- a/[05] 소스코드/backend/build.gradle
+++ b/[05] 소스코드/backend/build.gradle
@@ -8,10 +8,10 @@ group = 'com.roomoftruth'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
-jar {
-	manifest {
-		attributes 'Main-Class' : 'RotApplication'
-	}
+bootJar {
+	archiveBaseName = 'rot'
+	archiveFileName = 'RoomOfTruth.jar'
+	archiveVersion = "1.0.0"
 }
 
 configurations {
