--- a/[05] 소스코드/backend/src/main/resources/application.yml
+++ b/[05] 소스코드/backend/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://k02b2031.p.ssafy.io/rot?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: test
-    password: rot123456789!!
+    url: jdbc:mysql://54.180.54.106/rot?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: rot
+    password: rot1234!!
 
 server:
   port: 8080
